tests/sema/fail/v8_fail_print_i64.ep
# COMPILE_FAIL: print expected str, got i64

fun main(): i64 {
    print(1)
    return 0
}
